Cleanup (using modern NIO and collections API; typos; formatting)
GitOrigin-RevId: 6193197b806702ba097ce7a457d540220e96ccf6