@@ -26,7 +26,6 @@ import com.sun.jna.win32.StdCallLibrary;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 
@@ -122,7 +121,7 @@ public final class NativeFileManager {
       }
     }
 
-    return Collections.emptyList();
+    return List.of();
   }
 
   @SuppressWarnings({"SpellCheckingInspection", "unused", "UnusedReturnValue"})
