@@ -60,7 +60,7 @@ public abstract class PatchTestCase extends UpdaterTestCase {
   }
 
   protected static Map<String, Long> digest(Patch patch, File dir) throws IOException {
-    return new TreeMap<>(patch.digestFiles(dir, Collections.emptySet()));
+    return new TreeMap<>(patch.digestFiles(dir, Set.of()));
   }
 
   protected static List<PatchAction> sortActions(List<PatchAction> actions) {
